--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,13 @@
 @import 'tailwindcss';
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9a5c30;
+}
